Obsługa brakujących plików, poprawki w logach Playera
